--- a/languages/sh/awk/awk.org
+++ b/languages/sh/awk/awk.org
@@ -1,35 +1,12 @@
 #+TITLE: AWK's reference
 #+DATE: <2023-09-04 lun>
 
-|-----------+-------------------------------------------------------------------------------|
-|           | url                                                                           |
-|-----------+-------------------------------------------------------------------------------|
-| book      | https://www.awk.dev/                                                          |
-| wiki      | https://en.wikipedia.org/wiki/AWK                                             |
-| wikibooks | https://en.wikibooks.org/wiki/AWK                                             |
-| web repl  | https://awk.js.org/                                                           |
-|-----------+-------------------------------------------------------------------------------|
-| gawk      | https://www.gnu.org/software/gawk/                                            |
-| mawk      | https://web.archive.org/web/20240202023335/https://invisible-island.net/mawk/ |
-| nawk      | https://github.com/onetrueawk/awk                                             |
-|           | https://justine.lol/awk/                                                      |
-| goawk     | https://github.com/benhoyt/goawk                                              |
-| bioawk    | https://github.com/lh3/bioawk                                                 |
-|-----------+-------------------------------------------------------------------------------|
-
-#+begin_src
-$ readelf -d /usr/bin/gawk | grep Shared # 689K
- 0x0000000000000001 (NEEDED)             Shared library: [libsigsegv.so.2]
- 0x0000000000000001 (NEEDED)             Shared library: [libreadline.so.8]
- 0x0000000000000001 (NEEDED)             Shared library: [libmpfr.so.6]
- 0x0000000000000001 (NEEDED)             Shared library: [libgmp.so.10]
- 0x0000000000000001 (NEEDED)             Shared library: [libm.so.6]
- 0x0000000000000001 (NEEDED)             Shared library: [libc.so.6]
-
-$ readelf -d /usr/bin/mawk | grep Shared # 155K
- 0x0000000000000001 (NEEDED)             Shared library: [libm.so.6]
- 0x0000000000000001 (NEEDED)             Shared library: [libc.so.6]
-#+end_src
+|-----------+-----------------------------------|
+| book      | https://www.awk.dev/              |
+| wiki      | https://en.wikipedia.org/wiki/AWK |
+| wikibooks | https://en.wikibooks.org/wiki/AWK |
+| web repl  | https://awk.js.org/               |
+|-----------+-----------------------------------|
 
 - #!/usr/bin/awk -f
 
@@ -392,6 +369,7 @@ https://www.gnu.org/software/gawk/manual/html_node/Format-Modifiers.html
 | exercises           | https://github.com/exercism/awk                                |
 |---------------------+----------------------------------------------------------------|
 * snippets
+
 - wEiRd - removes leading space
   #+begin_src awk
   $ awk '{ $1=$1 }1' file.txt
@@ -449,3 +427,28 @@ https://www.gnu.org/software/gawk/manual/html_node/Format-Modifiers.html
         return out "\n"
     }
   #+end_src
+
+* implementations
+
+|--------+-------------------------------------------------------------------------------|
+| gawk   | https://www.gnu.org/software/gawk/                                            |
+| mawk   | https://web.archive.org/web/20240202023335/https://invisible-island.net/mawk/ |
+| nawk   | https://github.com/onetrueawk/awk                                             |
+|        | https://justine.lol/awk/                                                      |
+| goawk  | https://github.com/benhoyt/goawk                                              |
+| bioawk | https://github.com/lh3/bioawk                                                 |
+|--------+-------------------------------------------------------------------------------|
+
+#+begin_src
+$ readelf -d /usr/bin/gawk | grep Shared # 689K
+ 0x0000000000000001 (NEEDED)             Shared library: [libsigsegv.so.2]
+ 0x0000000000000001 (NEEDED)             Shared library: [libreadline.so.8]
+ 0x0000000000000001 (NEEDED)             Shared library: [libmpfr.so.6]
+ 0x0000000000000001 (NEEDED)             Shared library: [libgmp.so.10]
+ 0x0000000000000001 (NEEDED)             Shared library: [libm.so.6]
+ 0x0000000000000001 (NEEDED)             Shared library: [libc.so.6]
+
+$ readelf -d /usr/bin/mawk | grep Shared # 155K
+ 0x0000000000000001 (NEEDED)             Shared library: [libm.so.6]
+ 0x0000000000000001 (NEEDED)             Shared library: [libc.so.6]
+#+end_src
