--- a/languages/latex.org
+++ b/languages/latex.org
@@ -1,3 +1,5 @@
+- codebases
+  - https://github.com/cab-1729/Pandoc-Themes?tab=readme-ov-file
 - https://en.wikibooks.org/wiki/LaTeX/Macros
 - https://www.overleaf.com/learn/latex/Lists
 - https://www.overleaf.com/learn/latex/Using_colours_in_LaTeX
