--- a/languages/lisp/common-lisp/lispturtles.org
+++ b/languages/lisp/common-lisp/lispturtles.org
@@ -1,6 +1,5 @@
-#+TITLE: it's parens all the way down!
+#+TITLE: It's parens all the way down!
 #+DATE: <2018-09-07 vie>
-#+OPTIONS: ^:nil
 
 * Introduction
 
@@ -57,8 +56,8 @@ As I put =(play)= I could had put a function that plays a sample, a MIDI call. A
 
 C Foreign Function Interface allows languages, in this case lisp, to interact with a C library, and with a proper wrapper a C++ library. This allows to re-use any code that runs at C speed within the live coding environment of lisp. For example, we can create C pointers to different types of data including structures.
 
+#+CAPTION: We load the binary blob of a C library, and within our lisp tracer program we poke and call different functions defined on them. Illustration by Keist Zenon https://youtu.be/lvHi5LyhxGk
 [[https://raw.githubusercontent.com/azimut/shiny/master/static/cffi.jpg]]
-/CFFI - We load the binary blob of a C library, .so on Linux, and within our lisp program (the ghost in the illustration) we poke and call different functions defined on them.-Illustration by Keist Zenon https://youtu.be/lvHi5LyhxGk/
 
 ** Limitations
 
@@ -129,8 +128,8 @@ So you can go down to phasor, %phasor, until only bare lisp constructs are at si
 Open Source Computer Vision, is one of such libraries that provides a C API we can use. A wrapper was build already by
 [[https://github.com/byulparan/common-cv][byulparan]]. Meaning we have now access to the image filters and transformations provided by opencv. Or might be better the video feed of our webcam or any video file as frames. Put it along with lisp and we can live-code an image recognition software or video sequencer.
 
+#+CAPTION: Live editing video by scaling it down and repeating it on a bigger canvas
 [[https://raw.githubusercontent.com/azimut/shiny/master/static/opencv2.jpg]]
-/OpenCV - Live editing video by scale it down and repeating it on a bigger canvas/
 
 ** CEPL
 
@@ -151,8 +150,8 @@ Then, on the render loop, we change the values and push it again as a texture:
   (push-g *carr* (texref *tex*))
 #+END_SRC
 
+#+CAPTION: left - We display a texture based on the content of a random C array. right - a visualization that receives the wave data through a uniform
 https://raw.githubusercontent.com/azimut/shiny/master/static/cepl.jpg
-/CEPL - left - We display a texture based on the content of a random C array. right - a visualization that receives the wave data through a uniform/
 
 Of course this is just the surface of what you can do visually with CEPL and OpenGL. The important part here is that we never stopped, I can change an improvise on the moment what and how I display something without restarts or long compilations. Is just necessary find the right abstraction that works for you.
 
