--- a/languages/rust/rust.org
+++ b/languages/rust/rust.org
@@ -43,15 +43,15 @@
 * Language
 ** Types
 *** Primitive
-|-------+-----+---|
-| u8    | 1u8 |   |
-| i32   |  10 |   |
-| i64   |   ? |   |
-| f64   |  5. |   |
-| isize |  10 |   |
-| usize |  10 |   |
-| char  | 'a' |   |
-|-------+-----+---|
+|-------+-----|
+| u8    | 1u8 |
+| i32   |  10 |
+| i64   |   ? |
+| f64   |  5. |
+| isize |  10 |
+| usize |  10 |
+| char  | 'a' |
+|-------+-----|
 *** Compound
 |---------+----------------+-----------+--------------+-------------------|
 |         | create         | access    | match        | insert            |
