--- a/languages/sh/awk/awkgoodbadugly.org
+++ b/languages/sh/awk/awkgoodbadugly.org
@@ -1,6 +1,6 @@
 #+TITLE: AWK: The Good, The Bad & The Ugly
 #+DATE: <2024-02-27 mar>
-#+OPTIONS: ^:nil num:nil toc:nil
+#+OPTIONS: num:nil toc:nil
 
 Inspired in a similar [[https://forum.exercism.org/t/tcl-some-notes/5567][post]] on exercism. I though I would share my notes on Awk that I took while [[https://github.com/azimut/challenges/blob/master/adventofcode/23/README.md][I was doing adventofcode]] last year.
 
